--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "qrcode": "^1.5.3",
     "rate-limiter-flexible": "^2.4.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "mysql2": "^3.6.0"
   }
 }
